2001-05-08  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.h (gnome_selector_client_set_uri):
	Added `GDestroyNotify destroy_fn' argument.

	* gnome-selector-client.c (gnome_selector_client_set_uri):
	Actually invoke the async_func when we get the event.

2001-05-08  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.h
	(GnomeSelectorClientAsyncHandle): New typedef.
	(GnomeSelectorClientAsyncFunc): New typedef.
	(gnome_selector_client_get_uri): New function.
	(gnome_selector_client_set_uri): New function.

2001-05-08  Martin Baulig  <baulig@suse.de>

	* gnome-selectorP.h: Removed.
	* gnome-selector.[ch]: Removed, this is now in libgnome.
	* gnome-file-selector.[ch]: Removed, this is now in libgnome.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* gnome-entry.h (gnome_entry_construct): New function.
	(gnome_entry_new_from_selector): This function was formerly known
	as gnome_entry_construct_from_selector().

2001-04-30  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.[ch]: New files.
	(GnomeSelectorClient): This is derived from BonoboWidget and
	is the client side wrapper for a GNOME::Selector CORBA object.

	* gnome-entry.h (GnomeEntry): Derive this from GnomeSelectorClient.
	(gnome_entry_construct_from_selector): New function.

	* gnome-boxed.defs (GnomeSelectorAsyncHandle): Removed.

2001-04-30  Martin Baulig  <baulig@suse.de>

	* gnomemarshal.list, gnomemarshal-main.c: Moved to libgnome.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* gnome-dock*.[ch]: Removed; use BonoboDock instead.

	* gnome-app.[ch], gnome-app-helper.[ch], gnome-appbar.[ch],
	gnome-stock.[ch]: Removed.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* Makefile.am, libgnomeui.h: Moved all temporarily disabled
	stuff to a new `unused_SOURCES' target and #ifdef FIXME them
	in libgnome.h.

2001-04-29  Martin Baulig  <baulig@suse.de>

	Temporarily removed gnome-helpsys, gnome-popup-menu,
	gnome-popup-help and gnome-textfu from the build.
